# deadbeef-vinyl_record

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_CN.md
include/plugins/artwork/: artwork.h
include/plugins/gtkui/: gtkui_api.h
src/: MyPlugin.c  album_art.c  album_art.h  dummy_main.c  exports.def  vinyl_widget.c  vinyl_widget.h
